following instruction for gh pages

--- a/employee-react-app/package.json
+++ b/employee-react-app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "employee-react-app",
-  "homepage": "https://mpasricha1.github.io/employee_directory",
+  "homepage": "https://iorellana21.github.io/employee-directory/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
